Update ApiHandler.java